--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,3 +8,4 @@ option('retractable_msg', type : 'feature', value : 'enabled', description :
   'allows LPs to each have a single, self-scheduled retractable message')
 option('neural_interface', type : 'feature', value : 'enabled', description : 
   'Activates neural interface')
+option('profile', type : 'feature', value : 'disabled', description : '')
